--- a/contactus.html
+++ b/contactus.html
@@ -7,6 +7,7 @@
     <title>CONTACT US</title>
     <link rel="stylesheet" href="style.css">
     <!-- for example -->
+    <!-- for example -->
     <link rel="stylesheet" href="JAVA.js">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&family=Kufam:wght@600&display=swap"
         rel="stylesheet">
